Fixed incorrect link to css

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <script src="https://raw.github.com/mekwall/jquery-vangogh/master/src/jquery.vangogh.js"></script>
   
   <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.13/themes/flick/jquery-ui.css">
-  <link rel="stylesheet" href="https://raw.github.com/mekwall/jquery-vangogh/master/src/jquery.vangogh.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Special+Elite&v1">
+  <link rel="stylesheet" href="jquery-vangogh/src/jquery.vangogh.css">
 
   <style type="text/css">
     body {
