Removed margin/padding from .vangogh

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     .footer { text-align:center; padding-top:30px; font-style: italic; }
     .ui-widget { font-size: 1em; }
     p { margin-top: 0; -webkit-margin-before: 0; }
+    .vangogh { margin: 0; padding: 0; }
   </style>
   
   <script>
