--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="master/src/jquery.vangogh.css">
 
   <style type="text/css">
-    html { oerflow-y: scroll; }
+    html { overflow-y: scroll; }
     body {
       margin-top: 1.0em;
       background-color: #ffffff;
